# studytracker

./: .gitignore  README.md  innitial_prompt.md  pyproject.toml
.github/workflows/: ci.yml
src/studytracker/: cli.py  logic.py  models.py  storage.py
tests/: test_storage.py
