[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studytracker"
version = "0.1.0"
description = "Tiny CLI to track study sessions (topic + minutes)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "You"}]

[project.scripts]
studytracker = "studytracker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = false


